feat: remove mobile navigation component and styles; implement safe mention text component
- Deleted mobile navigation component files including styles and tests.
- Added SafeMentionTextComponent for rendering text with @username mentions safely.
- Updated comment and post card components to use SafeMentionTextComponent instead of highlight mention pipe.
- Refactored highlight mention pipe to return plain text to prevent XSS.
- Introduced email verification functionality in backend with related services, models, and repositories.
- Added validation service to enforce student registration limits.
- Created verify email component for user email verification flow in frontend.